Let Quarkus Server tests run on Java 17+
See https://github.com/quarkusio/quarkus/issues/24492